--- a/TypeScript/getting started/index.html
+++ b/TypeScript/getting started/index.html
@@ -11,7 +11,7 @@
     <input type="number" id="num1">
     <input type="number" id="num2">
     <button type="submit" id="submit">get num</button>
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
 </body>
 
 </html>
